# CMakePractice

./: CMakeLists.txt  config.h.in  main.cpp
mathfunc/: CMakeLists.txt  mathfunc.cpp  mathfunc.h
